<resources>
    <string name="app_name">Bike Sharing</string>
    <string name="cantons">Cantons</string>
    <string name="places">Places</string>
    <string name="villes">Villes</string>
    <string name="authors">Created by Daniel De Girolamo &#38; Pedro Gil Ferreira</string>
    <string name="search">Rechercher</string>
    <string name="bike_sharing">Bike Sharing</string>
    <string name="click_here_to_generate_qr_code">CLICK HERE TO generate qr code</string>
    <string name="enter_text_here">Enter Text Here</string>
    <string name="user">User</string>
    <string name="administration">Administration</string>
    <string name="rechercher">Rechercher</string>
    <string name="statistiques">Statistiques</string>
    <string name="utilisateurs">Utilisateurs</string>
    <string name="action_settings">Paramètres</string>
    <string name="action_logout">Se déconnecter</string>
    <string name="adresse_mail">Adresse mail</string>
    <string name="mot_de_passe_oubli">Mot de passe oublié ?</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="valider">Valider</string>
    <string name="login">Login</string>
    <string name="s_enregistrer">S\'enregistrer</string>
    <string name="adresse_exacte">Adresse exacte</string>
    <string name="ici_le_nom_du_lieu">Ici le nom du lieu</string>
    <string name="ici_le_nombre_de_places_libres">Ici le nombre de places libres</string>
    <string name="ici_le_nombre_de_v_los">Ici le nombre de vélos</string>
    <string name="l_adresse_ici">L\'adresse ici</string>
    <string name="louer_un_v_lo">Louer un vélo</string>
    <string name="nombre_de_places_libres">Nombre de places libres</string>
    <string name="nombre_de_v_los_disponibles">Nombre de vélos disponibles</string>
    <string name="language">Language</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="bike_sharingTitle">Bike Sharing</string>
    <string name="english">ENGLISH</string>
    <string name="francais">FRANCAIS</string>
    <string name="german">GERMAN</string>
    <string name="Profile">Profil</string>
    <string name="AddPlace">Add a place</string>
    <string name="EditPlace">Edit a place</string>
    <string name="InfoPlace">Information</string>
    <string name="Language">Choose a language</string>
    <string name="pr_nom">Prénom</string>
    <string name="le_pr_nom_ici">Le prénom ici</string>
    <string name="nom">Nom</string>
    <string name="le_nom_ici">Le nom ici</string>
    <string name="mail_ici">L\'adresse e-mail ici</string>
    <string name="le_canton_ici">Le canton ici</string>
    <string name="type_d_utilisateur">Type d\'utilisateur</string>
    <string name="le_type_de_user_ici">Le type de user ici</string>
    <string name="confirmer_le_mot_de_passe">Confirmer le mot de passe</string>
    <string name="icone_de_l_application">icone de l\'application</string>
    <string name="errorPlaceExisting">Une place avec ce nom ou cette adresse existe déjà.</string>
    <string name="errorMailExisting">Un compte avec cette adresse e-mail existe déjà</string>
    <string name="errorProfilEmptyFields">Certains champs sont vides</string>
    <string name="errorPassMail">Email et/ou mot de passe incorrect(s) !</string>
    <string name="errorConfirmPass">La confirmation de mot de passe ne correspond pas</string>
    <string name="errorAccountExisting">Compte déjà existant</string>
    <string name="warningLogout">Etes-vous sûr de vouloir vous déconnecter ?</string>
    <string name="yes">oui</string>
    <string name="no">non</string>
    <string name="warningDeletePlace">Etes-vous sûr de vouloir supprimer la place</string>
    <string name="warningDeleteAdmin">Voulez-vous vraiment retirer les droits d\'administration à</string>
    <string name="warningAddAdmin">Voulez-vous vraiment donner les droits d\'administration à</string>
    <string name="warningDeleteUser">Etes-vous sûr de vouloir supprimer l\'utilisateur</string>
    <string name="namePlace">Nom de la place</string>
    <string name="namePicture">Nom de l\'image (sans extension)</string>
    <string name="nombrePlace">Nombre de places</string>
    <string name="adresse">Adresse</string>
    <string name="synchroniser">Synchroniser</string>
    <string name="npa_de_la_ville">NPA de la ville</string>
    <string name="nom_de_la_ville">Nom de la ville</string>
    <string name="about">A propos</string>
    <string name="errorTownExisting">Cette ville existe déjà</string>
    <string name="addTown">Ajouter une ville</string>
    <string name="synchronizeCloud">Synchronisation avec le cloud...</string>
    <string name="warningDeleteTown">Etes-vous sûr de vouloir supprimer la ville</string>
    <string name="warningDeleteTown2">et toutes ses places ?</string>
    <string name="administrator">administrateur</string>
</resources>
