<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context="com.example.daniel.bikesharing.RegisterActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolAddTown"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:title="@string/bike_sharing"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/linearLayoutAddTown"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolAddTown"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <EditText
            android:id="@+id/txtAddTownName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nom_de_la_ville" />

        <EditText
            android:id="@+id/txtAddTownNpa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/npa_de_la_ville" />

    </LinearLayout>

    <Button
        android:id="@+id/btnAddPlaceValidate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorButton"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/valider"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutAddTown" />

</android.support.constraint.ConstraintLayout>