<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.daniel.bikesharing.AdminHomeActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolAdminHome"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:title="@string/bike_sharing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/linearLayoutAdmin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolAdminHome">

        <Button
            android:id="@+id/btnAdminSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rechercher"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:background="@color/colorBackground"/>

        <Button
            android:id="@+id/btnAdminUsers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:background="@color/colorBackground"
            android:text="@string/utilisateurs" />

        <Button
            android:id="@+id/btnAdminPlaces"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:background="@color/colorBackground"
            android:text="Places" />

        <Button
            android:id="@+id/btnAdminStats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:background="@color/colorBackground"
            android:text="@string/statistiques" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
