<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.daniel.bikesharing.LanguageActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolLanguage"
        android:background="@color/colorPrimary"
        android:title="@string/bike_sharing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </android.support.v7.widget.Toolbar>

    <ImageView
        android:layout_width="49dp"
        android:layout_height="33dp"
        android:src="@drawable/ic_all"
        android:layout_marginTop="206dp"
        android:id="@+id/imageView2"
        tools:ignore="ContentDescription,RtlHardcoded"
        android:layout_marginLeft="43dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="43dp" />

    <ImageView
        android:layout_width="55dp"
        android:layout_height="33dp"
        android:src="@drawable/ic_en"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="206dp"
        android:id="@+id/imageView3"
        tools:ignore="ContentDescription,RtlHardcoded"
        app:layout_constraintRight_toLeftOf="@+id/imageView"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toRightOf="@+id/imageView2"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <ImageView
        android:layout_width="49dp"
        android:layout_height="33dp"
        android:src="@drawable/ic_fr"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="206dp"
        tools:ignore="ContentDescription,RtlHardcoded"
        android:layout_marginRight="43dp"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/imageView"
        android:layout_marginEnd="43dp" />

    <Button
        android:id="@+id/FR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/francais"
        android:onClick="changeToFR"
        android:layout_marginTop="256dp"
        android:layout_marginEnd="24dp"
        android:background="@color/colorBackground"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <Button
        android:id="@+id/ALL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/german"
        android:onClick="changeToALL"
        android:layout_marginTop="256dp"
        android:layout_marginStart="24dp"
        android:background="@color/colorBackground"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/ENG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/english"
        android:onClick="changeToEN"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="256dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@color/colorBackground"
        app:layout_constraintLeft_toRightOf="@+id/ALL"
        app:layout_constraintRight_toLeftOf="@+id/FR" />

</android.support.constraint.ConstraintLayout>